Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-51971

WebEngine doesn't use 'modified' QApplication::arguments()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.6.1
    • 5.6.0
    • WebEngine
    • None
    • Windows 7 64 bit, MSVS 2013, Qt 5.6
    • 665c422803e9d6767f9fa2fd69964c03a254167b, c8fa86570 (134-based-refactor)

      If I provide modified arguments to QApplication they are NOT used by WebEngine/Chrome/Blink

      e.g.:

      QApplication a(argc, my_argv);
      qDebug() << "my_argv: " << qApp->arguments();
      // ("C:\\temp\\app.exe", "--ppapi-flash-path=./pepflashplayer.dll") but no flash
      

      so my_argv should be passed down to WebEngine but not honored

      starting app manually from console works as expected:

      app.exe --ppapi-flash-path=./pepflashplayer.dll
      

      Starting app from IDE with properly set Working Directory and Arguments (--ppapi-flash-path=./pepflashplayer.dll) works too

      Is Chromium still relying on arguments retrieved by GetCommandLine() ... in that case I'm not sure if this is a BUG or feature request to fix QWebEngine to conform to Qt design specs and use QApplication provided arguments actually.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            poikelin Joni Poikelin
            jirauser39898 user-780e6 (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes