Add CommandLine::CreateEmpty

Add a static function to create the CommandLine object for the current
process without initializing it.
Rationale: on Windows we need to initialize the CommandLine differently
than Chromium intends. Esp. we want to pass our own arguments instead of
relying on GetCommandLineW().

Task-number: QTBUG-51971
Change-Id: I0d1f0aa4eabad470d730f4f0a76cd1535f8f23ce
Reviewed-by: Kai Koehne <kai.koehne@theqtcompany.com>
Reviewed-by: Michael Brüning <michael.bruning@theqtcompany.com>