chromium/base/command_line.cc
@@ -207,7 +207,7 @@ void CommandLine::InitUsingArgvForTesting(int argc, const char* const* argv) {
 #endif  // defined(OS_WIN)
 
 // static
-bool CommandLine::Init(int argc, const char* const* argv) {
+bool CommandLine::CreateEmpty() {
   if (current_process_commandline_) {
     // If this is intentional, Reset() must be called first. If we are using
     // the shared build mode, we have to share a single object across multiple
@@ -216,6 +216,14 @@ bool CommandLine::Init(int argc, const char* const* argv) {
   }
 
   current_process_commandline_ = new CommandLine(NO_PROGRAM);
+  return true;
+}
+
+// static
+bool CommandLine::Init(int argc, const char* const* argv) {
+  if (!CreateEmpty())
+      return false;
+
 #if defined(OS_WIN)
   current_process_commandline_->ParseFromString(::GetCommandLineW());
 #elif defined(OS_POSIX) || defined(OS_FUCHSIA)
