chromium/base/command_line.h
@@ -77,6 +77,8 @@ class BASE_EXPORT CommandLine {
   static void InitUsingArgvForTesting(int argc, const char* const* argv);
 #endif
 
+  static bool CreateEmpty();
+
   // Initialize the current process CommandLine singleton. On Windows, ignores
   // its arguments (we instead parse GetCommandLineW() directly) because we
   // don't trust the CRT's parsing of the command line, but it still must be
